# Rag_Agentic_AI_AssistantFinance

./: README.md  pyproject.toml  requirements.txt
info/: README_ARCHITECTURE_RAG_EXECUTION.md  README_ARCHITECTURE_TOOLS_EXECUTION.md  README_BASIC_CHATBOT.md  RSG_flow_details.md
src/langgraphagenticai/: main.py
src/langgraphagenticai/RAG/: rag_module.py
src/langgraphagenticai/graph/: graph_builder.py
src/langgraphagenticai/nodes/: rag_node.py
src/langgraphagenticai/state/: state.py
src/langgraphagenticai/ui/: uiconfigfile.ini
src/langgraphagenticai/ui/streamlitui/: display_result.py  loadui.py
temp/: README_INTERVIEW_BASIC_CHATBOT.md  README_INTERVIEW_CHATBOT_WITH_TOOLS.md  README_INTERVIEW_RAG_PART1_DOCUMENT_PROCESSING.md  README_INTERVIEW_RAG_PART2_EMBEDDINGS_VECTORSTORE.md
vectorstore_db/vectorstore_40b03b47/: index.faiss
