[project]
name = "rag-agentic-ai-assistantfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "pypdf>=6.1.3",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
    "watchdog>=6.0.0",
]
